# crucible-player-coach

./: .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
artifacts/: 45808f93-9c64-4a12-be99-0c9212a4aeb0.json  5c50bc6f-5072-48d9-9898-a3d742c7befa.json  94dbbbba-928d-4ddc-98ca-5ca92c9ad441.json  962fc542-ae67-46f7-915d-c9e44dd2db2b.json  ab1eb556-d52d-4e60-bbff-ec99df5b3e81.json  afa142ac-a2c6-47a7-a579-f63f0f3fe0a1.json  b1d66b8a-dec4-406c-9418-2c7a195ffa04.json  cad67c97-aa15-4ee6-b6e7-7f730f7e5919.json  cb557db3-adac-4bf2-b6ca-f188b67a3f94.json  f20c896c-7ce7-4c36-be1e-eac345b7a9db.json
dashboard/: app.py  backtest_state.py  db.py  parallel.py  recovery.py  state.py
dashboard/components/: characters.py  constraint_form.py  round_panel.py  speech_bubble.py
dashboard/pages/: 01_exchange.py  02_constraints.py  03_history.py  04_settings.py  05_backtest.py
dashboard/streaming/: coach_stream.py  loop_runner.py  player_stream.py
examples/constraints/: aggressive.json  conservative.json  futures_compatible.json  moderate.json  strict.json
player_coach/agents/: __init__.py  _caching.py  coach.py  player.py
player_coach/analytics/: __init__.py  kelly.py  monte_carlo.py  trade_stats.py
player_coach/artifacts/: writer.py
player_coach/backtest/: __init__.py  compare.py  metrics.py  regime_decomposition.py  reporting.py  runner.py  walk_forward.py
player_coach/constraints/: __init__.py  checker.py  deriver.py  evidence_builder.py  phase_profiles.py  regime_profiles.py  resolver.py  schema.py
scripts/: demo_player_coach.py
(+82 files in other folders)
