[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "player-coach-core"
version = "1.0.0"
description = "Adversarial quality loop for trading decisions"
requires-python = ">=3.10"
dependencies = [
    "ewm-core",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest",
    "ruff",
]
dashboard = [
    "streamlit>=1.35",
    "anthropic>=0.40.0",
]

[tool.hatch.build.targets.wheel]
packages = ["player_coach"]

[tool.ruff]
line-length = 88
target-version = "py311"
